# distrovitals

./: .gitignore  Cargo.toml  Dockerfile  distrovitals.db  fly.toml  populate_descriptions.sql
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  routes.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/collector/: Cargo.toml
crates/collector/src/: github.rs  lib.rs  reddit.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  models.rs  queries.rs  schema.rs
web/: app.js  index.html
web/static/: app.js  index.html  styles.css
