[package]
name = "distrovitals-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dv"
path = "src/main.rs"

[dependencies]
distrovitals-database.workspace = true
distrovitals-collector.workspace = true
distrovitals-analyzer.workspace = true
distrovitals-api.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
